--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,28 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-app.js"></script> -->
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!-- <script src="https://www.gstatic.com/firebasejs/7.11.0/firebase-analytics.js"></script> -->
+
+  <!-- // Your web app's Firebase configuration
+  <script>
+
+  var firebaseConfig = {
+    apiKey: "AIzaSyDmP8y67NjuRH-U4vFT2zAGCdWIoiwHT6w",
+    authDomain: "nawa-organization.firebaseapp.com",
+    databaseURL: "https://nawa-organization.firebaseio.com",
+    projectId: "nawa-organization",
+    storageBucket: "nawa-organization.appspot.com",
+    messagingSenderId: "339203282155",
+    appId: "1:339203282155:web:595e9c3cc18b46f0f29aae",
+    measurementId: "G-EBR4T53DDL"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics(); -->
+</script>
 </body>
 </html>
